# aoc

./: .gitignore  Cargo.toml  LICENSE  README.md
day_1/: Cargo.toml
day_1/benches/: bench.rs
day_1/src/: lib.rs  main.rs
day_2/: Cargo.toml
day_2/benches/: bench.rs
day_2/src/: lib.rs
day_3/: Cargo.toml
day_3/benches/: bench.rs
day_3/src/: lib.rs
day_4/: Cargo.toml
day_4/benches/: bench.rs
day_4/src/: lib.rs
day_5/: Cargo.toml
day_5/benches/: bench.rs
day_5/src/: lib.rs  main.rs
day_6/: Cargo.toml
day_6/benches/: bench.rs
day_6/src/: lib.rs  main.rs
day_7/: Cargo.toml
day_7/benches/: bench.rs
day_7/src/: lib.rs  main.rs
day_8/: Cargo.toml
day_8/benches/: bench.rs
day_8/src/: lib.rs  main.rs
day_9/: Cargo.toml
day_9/benches/: bench.rs
day_9/src/: lib.rs  main.rs
